# python-sqs-celery

./: pyproject.toml  readme.md  test_main.http
app/: __init__.py
app/celery/: __init__.py  celery_app.py
app/cmd/: api.py
app/domains/email/worker/: email.py
app/domains/users/models/: users.py
app/domains/users/router/: sign.py
app/domains/users/schemas/: sign.py
app/domains/users/services/: sign.py
