[tool.poetry]
name = "celery-ex"
version = "0.1.0"
description = ""
authors = ["pli <chordplaylist@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
pymysql = "^1.1.1"
boto3 = "^1.34.131"
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
celery = "^5.4.0"
asyncio = "^3.4.3"
redis = "^5.0.7"
pytest = "^8.2.2"
eventlet = "^0.36.1"
pycurl = "^7.45.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
